[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot_db_manager/table.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot_db_manager/dlgs/new_table_dlg.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot_db_manager/dlgs/error_dlg.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot_db_manager/db_interface.gd" type="Script" id=4]
[ext_resource path="res://addons/godot_db_manager/dlgs/new_db_dlg.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot_db_manager/dlgs/confirm_new_db_dlg.tscn" type="PackedScene" id=6]

[node name="db_interface" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dlg" type="WindowDialog" parent="."]
visible = true
margin_right = 1600.0
margin_bottom = 900.0
rect_min_size = Vector2( 300, 100 )
window_title = "Godot Database Manager"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="HBoxContainer" parent="dlg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -877.0
rect_min_size = Vector2( 1600, 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_db_btn" type="Button" parent="dlg/menu"]
margin_right = 66.0
margin_bottom = 29.0
text = "New DB"

[node name="save_db_btn" type="Button" parent="dlg/menu"]
margin_left = 70.0
margin_right = 143.0
margin_bottom = 29.0
disabled = true
text = "Save DB"

[node name="load_db_btn" type="Button" parent="dlg/menu"]
margin_left = 147.0
margin_right = 222.0
margin_bottom = 29.0
text = "Load DB"

[node name="new_table_btn" type="Button" parent="dlg/menu"]
margin_left = 226.0
margin_right = 314.0
margin_bottom = 29.0
disabled = true
text = "New Table"

[node name="current_db_name" type="Label" parent="dlg/menu"]
margin_left = 318.0
margin_top = 4.0
margin_right = 518.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )
text = "DB path: NONE"

[node name="autosave_on_load" type="CheckBox" parent="dlg/menu"]
margin_left = 522.0
margin_right = 688.0
margin_bottom = 29.0
disabled = true
text = "Autosave on close"

[node name="tables_lbl" type="Label" parent="dlg"]
margin_top = 25.0
margin_right = 150.0
margin_bottom = 43.0
rect_min_size = Vector2( 150, 18 )
text = "Tables:"
align = 1

[node name="tables_container" type="ItemList" parent="dlg"]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 900.0
rect_min_size = Vector2( 150, 850 )

[node name="table" parent="dlg" instance=ExtResource( 1 )]
visible = false
margin_left = 150.0
margin_top = 50.0
margin_right = 0.00012207
margin_bottom = 6.10352e-05

[node name="new_db_dlg" parent="dlg" instance=ExtResource( 5 )]
visible = false

[node name="confirm_new_db_dlg" parent="dlg" instance=ExtResource( 6 )]

[node name="new_table_dlg" parent="dlg" instance=ExtResource( 2 )]

[node name="error_dlg" parent="dlg" instance=ExtResource( 3 )]

[node name="load_db_dlg" type="FileDialog" parent="dlg"]
margin_right = 601.0
margin_bottom = 365.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.JSON" )
show_hidden_files = true
__meta__ = {
"_edit_use_anchors_": false
}
